<resources>
    <string name="app_name">stock-stroke-alert</string>
    <string name="ticket_search_hint">Поиск тикера</string>
    <string name="users_tickers_list_is_empty">Здесь отображаются биржевые тикеры которые отслеживаются вашимими трекерами.\nПока не созданно ни одного трекера</string>
    <string name="button_to_history">перейти к графику истории</string>
    <string name="button_hide_history_preview">скрыть график</string>
    <string name="button_show_history_preview">показать график</string>
    <string name="button_switch_to_candlestick_chart">свечной</string>
    <string name="button_switch_to_line_chart">линейный</string>
    <string name="button_create_ticker">создать трекер</string>
    <string name="tracker_difference_time_separator">за</string>
    <string name="button_pick_value_on_chart">Выбрать значения на графике</string>
    <string name="change_by">Изменение\nзначения на</string>
    <string name="crossing_value">Пересечение\nграницы в</string>
    <string name="per_time">За время:</string>
    <string name="notify_with">Уведомить с помощью:</string>
    <string name="default_decimal_value">0</string>
    <string name="days">Дней:</string>
    <string name="hours">Часов:</string>
    <string name="minutes">Минут:</string>
    <string name="button_notify_example">пример</string>
    <string name="push_notification">push уведомление</string>
    <string name="alarm_notification">alarm уведомление</string>
    <string name="messenger_notification">сообщение в мессенджеры</string>
    <string name="create">Создать</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="tracker_tutorial">Устройство должно быть подключено к Интернету, чтобы уведомление сработало в момент выполнения уловия.</string>
    <string name="error_time_filed_is_empty">Хотя бы одно поле со временем должно иметь значение отличное от нуля.</string>
    <string name="error_value_filed_is_empty">Выделенные поля должны быть заполнены значениями отличными от нуля.</string>
    <string name="threshold">Порог срабатывания:</string>
    <string name="threshold_default_value">100</string>
    <string name="invalid_value_hint">ВВЕДИТЕ</string>
    <string name="time_days">%1$sд.</string>
    <string name="time_hours">%1$sч.</string>
    <string name="time_minutes">%1$sм.</string>
    <string name="decimal_number_format">%.2f</string>
    <string name="quote_change_with_percent">%1$s (%2$s%3$s)</string>
    <string name="percent_symbol">%</string>
</resources>